fix: tweak styles on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -169,6 +169,11 @@ pre {
         padding-right: $spacing-unit / 2;
         padding-left: $spacing-unit / 2;
     }
+
+    @include media-query($on-mobile) {
+        padding-right: 5px;
+        padding-left: 5px;
+    }
 }
 
 
